--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ img {
 						description: 
 						`11. Czujnik temperatury i wilgotności zewnętrznej
 						<ul class="columns">
-						<li><a href="https://www.mapa.network/goto/R3QcFk_Vk?orgId=11" target="_blank">Czujnik temperatury i wilgotności</a></li>
+						<li><a href="https://www.mapa.network/goto/oZg5a8_Vz?orgId=11" target="_blank">Czujnik temperatury i wilgotności</a></li>
 						</ul>
 						<p style="text-align:center"><img src="./screeny/czujnik_11.png"></p>`		
 					});
@@ -163,7 +163,7 @@ img {
 						description: 
 						`12. Czujnik temperatury i wilgotności zewnętrznej
 						<ul class="columns">
-						<li><a href="https://www.mapa.network/goto/h2IsFzl4k?orgId=11" target="_blank">Czujnik temperatury i wilgotności</a></li>
+						<li><a href="https://www.mapa.network/goto/xAVt-Ul4k?orgId=11" target="_blank">Czujnik temperatury i wilgotności</a></li>
 						</ul>
 						<p style="text-align:center"><img src="./screeny/czujnik_12.png"></p>`		
 					});
